--- a/src/components/customs/Navbar/navbar.scss
+++ b/src/components/customs/Navbar/navbar.scss
@@ -12,6 +12,8 @@ aside {
 
 .search-bar {
   @include flex();
+  position:relative;
+  left: -100px;
   width: 400px;
   border-radius: 8px;
   overflow: hidden;
